; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_command.c_adb_reverse_remove.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_command.c_adb_reverse_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"localabstract:%s\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"reverse\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"--remove\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @adb_reverse_remove(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [123 x i8], align 16
  %6 = alloca [3 x i8*], align 16
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = getelementptr inbounds [123 x i8], [123 x i8]* %5, i64 0, i64 0
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @snprintf(i8* %7, i32 123, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = getelementptr inbounds [3 x i8*], [3 x i8*]* %6, i64 0, i64 0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %10, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8** %11, align 8
  %12 = getelementptr inbounds i8*, i8** %11, i64 1
  %13 = getelementptr inbounds [123 x i8], [123 x i8]* %5, i64 0, i64 0
  store i8* %13, i8** %12, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = getelementptr inbounds [3 x i8*], [3 x i8*]* %6, i64 0, i64 0
  %16 = getelementptr inbounds [3 x i8*], [3 x i8*]* %6, i64 0, i64 0
  %17 = call i32 @ARRAY_LEN(i8** %16)
  %18 = call i32 @adb_execute(i8* %14, i8** %15, i32 %17)
  ret i32 %18
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i32 @adb_execute(i8*, i8**, i32) #1

declare dso_local i32 @ARRAY_LEN(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
